# hermes-conscious-agency

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  __init__.py  install.py  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml
agency/: __init__.py  cli.py  config.py  cron.py  engine.py  heartbeat.py  origin.py  runtime.py  schemas.py  store.py  tools.py
examples/: config.yaml  encrypted-config.yaml
templates/: HEARTBEAT.md
tests/: conftest.py  test_cli.py  test_config.py  test_cron.py  test_engine.py  test_heartbeat.py  test_hermes_upstream.py  test_install.py  test_public_privacy.py  test_registration.py  test_store.py  test_tools_runtime.py
