[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-conscious-agency"
version = "0.4.2"
description = "Persistent agency and an opt-in longitudinal subjectivity experiment for Hermes Agent"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "b7216309-jpg"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
encryption = ["sqlcipher3>=0.5.4"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.9", "PyYAML>=6.0"]

[tool.setuptools]
packages = ["agency"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
